added examples and Debian/Ubuntu-specific settings

--- a/scripts_and_docs/docsis-server.conf
+++ b/scripts_and_docs/docsis-server.conf
@@ -41,7 +41,7 @@ DHCP-CPE-wrong-net-delete	yes
 
 
 # The location of your static modem config files.
-TFTP-Dir        /home/cable_modem_tftp
+TFTP-Dir        /home/docsis/tftpboot
 
 
 # If you want to double check the dynamic config files
