option 43 support / default bootfileselection

--- a/scripts_and_docs/docsis-server.conf
+++ b/scripts_and_docs/docsis-server.conf
@@ -27,7 +27,7 @@ Activate-DHCP		yes
 Activate-TFTP		yes
 Activate-TIME		yes
 Activate-SYSLOG		yes
-Activate-BACKG		yes
+Activate-BACKG		no
 
 
 # Ethernet device to use dhcp server on.
@@ -43,6 +43,10 @@ DHCP-CPE-wrong-net-delete	yes
 # The location of your static modem config files.
 TFTP-Dir        /home/docsis/tftpboot
 
+# Enable a Default-config for CMs
+
+ModemDefault	no
+#ModemDefaultFile	no-service.bin
 
 # If you want to double check the dynamic config files
 # that are being created you can set this setting to YES
